<resources>
    <string name="app_name">Parfem</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_new_entry">Add new entry</string>
    <string name="perfume_image">perfume image</string>
    <string name="name_label">Name:</string>
    <string name="text_placeholder">placeholder…</string>
    <string name="manufacturer_label">Manufacturer:</string>
    <string name="date_label">Production date:</string>
    <string name="gender_label">For gender:</string>
    <string name="loading">Loading…</string>
    <string name="back_arrow">◀</string>
    <string name="back_button">back button</string>
    <string name="back">◀ Back</string>
    <string name="perfume_bitmap">perfume_bitmap</string>
    <string name="no_perfumes_in_db">No perfumes in the database</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="perfume_name">Perfume name</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="production_date">Production date</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="calendar_emoji">📅</string>
    <string name="pick_a_date">📅 Pick a date</string>
    <string name="edit">🖌 Edit</string>
    <string name="delete">🗑 Delete</string>
    <string name="save">Save</string>
    <string name="edit_icon">edit icon</string>
    <string name="edit_image">Edit image</string>
</resources>