<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/edit_perfume_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/perfume_image"
            android:src="@drawable/ic_launcher_background"
            android:tintMode="screen"
            android:scaleType="center"
            android:adjustViewBounds="true"
            app:tint="@color/light_gray" />


        <ImageView
            android:id="@+id/edit_perfume_image_overlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/edit_icon"
            android:src="@android:drawable/ic_menu_edit"
            android:tintMode="multiply"
            app:tint="@color/light_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/edit_image"
            android:textStyle="bold"
            android:translationY="30sp" />

    </FrameLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="30sp"
        android:shrinkColumns="1"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TableRow android:layout_marginTop="30sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50sp"
                android:text="@string/name_label"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_perfume_name_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="no"
                android:hint="@string/perfume_name"
                android:inputType="text"
                tools:ignore="LabelFor" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manufacturer_label"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_perfume_manufacturer_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="no"
                android:hint="@string/manufacturer"
                android:inputType="text" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_label"
                android:textStyle="bold" />

            <Spinner android:id="@+id/edit_perfume_gender_spinner" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_label"
                android:textStyle="bold" />

            <Button
                android:id="@+id/edit_perfume_date_button"
                android:text="@string/pick_a_date" />
        </TableRow>

        <TableRow android:layout_marginTop="30sp">

            <Button
                android:id="@+id/edit_perfume_save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save" />
        </TableRow>

        <TableRow android:layout_marginTop="10sp">

            <Button
                android:id="@+id/edit_perfume_cancel_button"
                android:layout_weight="1"
                android:text="@string/cancel" />
        </TableRow>

    </TableLayout>
</LinearLayout>